--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.56.0"
+  },
+  "devDependencies": {
+    "@types/node": "18.11.9",
+    "@types/nprogress": "^0.2.0",
+    "@types/react": "18.0.25",
+    "typescript": "4.8.4"
   }
 }
