--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "18.11.9",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.25",
+    "prettier": "2.7.1",
     "typescript": "4.8.4"
   }
 }
